--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-19  Alex Schroeder  <alex@gnu.org>
+
+	* Makefile (test): Replace call to test.pl with a Test::Harness
+	call.
+	(oldtest): Keep the old tests until migrated.
+
 2006-09-18  Alex Schroeder  <alex@gnu.org>
 
 	* modules/atom.pl (DoAtom): Use /atom/info for the info document.
