--- a/t/README
+++ b/t/README
@@ -1,7 +1,5 @@
 
 
-
-
   Writing Tests
   =============
 
@@ -31,54 +29,129 @@
 
 
 
+  add_module, remove_module, and remove_rule
+  ------------------------------------------
+
+  Load a module before you run any tests:
+
+    add_module('usemod.pl');
+
+
+  Modules and rules need rarely be removed, since every *.t file
+  starts in a new process.  If you then want to run additional tests
+  without the module you added (in the same *.t file!), then remove
+  both the module and the rules it added. You'll have to do this
+  manually, unfortunately.
+
+    remove_module('usemod.pl');
+    remove_rule(\&UsemodRule);
+    
+
+
   update_page
   -----------
-  
-  $page = update_page($pagename, $content);
-  update_page($pagename, $content, $summary, $minor, $admin, @rest);
+
+    $page = update_page($pagename, $content);
+    update_page($pagename, $content, $summary, $minor, $admin, @rest);
 
   @rest is a list of parameter=value string pairs:
 
-  @rest = ('username=joe', 'ns=Moore');
+    @rest = ('username=joe', 'ns=Moore');
+
+  If updating the page resultet in a redirect, the redirect is stored
+  in the variable $redirect, and you still get the result page
+  returned.
+
+    test_page($redirect, split('\n',<<'EOT'));
+    banned text
+    wiki administrator
+    matched
+    See .*BannedContent.* for more information
+    EOT
+
+  You can even create pages containing file uploads directly:
+
+    $page = update_page('alex pic', "#FILE image/png\niVBORw0KGgoAAAA");
+
+
+  get_page
+  --------
+
+    $page = get_page('action=calendar');
+    $page = get_page('action=rc all=1 showedit=1');
+    $page = get_page('action=rc', 'all=1', 'showedit=1');
+    test_page(get_page('action=all'),
+	      'restricted to administrators');
+
+  Return the text of the page. The parameters are the parameters
+  available to you from the command line when using the CGI library:
+
+    keyword1 keyword2 keyword3
+    keyword1+keyword2+keyword3
+    name1=value1 name2=value2
+    name1=value1&name2=value2
+    "name1='I am a long value'" "name2=two\ words"
+    /your/path/here?name1=value1&name2=value2
 
 
 
   run_tests
   ---------
 
-  run_tests(split('\n', <<'EOT'));
-  input1
-  output1
-  input2
-  output2
-  EOT
+  Takes a list of alternating input and output strings, applies rules
+  (and thus @MyRules) to input and compares it to the output. If you
+  have html attributes in the output you want to test, use
+  xpath_run_tests, because the order of the attributes is not
+  guaranteed and varies with CGI library version.
+
+    run_tests(q{"Get lost!", they say.},
+	      q{&#x201c;Get lost!&#x201d;, they say.});
+
+    run_tests(split('\n', <<'EOT'));
+    input1
+    output1
+    input2
+    output2
+    EOT
 
   Newline excapes \n in the input and output are translated to real
   newlines when running the tests.
 
-  Checks @MyRules.
+    run_tests(split('\n',<<'EOT'));
+    * ''one\n** two
+    <ul><li><em>one</em><ul><li>two</li></ul></li></ul>
+    EOT
 
 
 
-  test_page
-  ---------
+  test_page and test_page_negative
+  --------------------------------
 
-  test_page($string, $regexp1, $regexp2, ...);
-  test_page(update_page($pagename, $content), $re1, $re2);
+  Tests any string for regular expression matches:
 
-  Tests any string for regular expression matches.
+    test_page($string, $regexp1, $regexp2, ...);
+    test_page(update_page($pagename, $content), $re1, $re2);
+
+  Or make sure tha none of the regular expressions match:
+
+    test_page_negative($page,
+		       "rollback",
+		       "Rollback",
+		       "EvilPage",
+		       "AnotherEvilPage",
+		      );
 
 
 
   xpath_run_tests
   ---------------
 
-  xpath_run_tests(split('\n',<<'EOT'));
-  $input1
-  $xpath1
-  $input2
-  $xpath2
-  EOT
+    xpath_run_tests(split('\n',<<'EOT'));
+    $input1
+    $xpath1
+    $input2
+    $xpath2
+    EOT
 
   Checks @MyRules. XPath is harder to write, but is ideal when the
   output contains tags with more than one attribute, since the order
@@ -87,20 +160,39 @@
 
   Example:
 
-  WikiWord
-  //a[@class="edit"][@title="Click to edit this page"]
+    WikiWord
+    //a[@class="edit"][@title="Click to edit this page"]
 
+
+
+  xpath_test and negative_xpath_test
+  ----------------------------------
+
+  The equivalent of test_page, but using xpath instead of exact
+  matches.
+
+
+    xpath_test(get_page('action=all pwd=foo'),
+	     '//p/a[@href="#HomePage"][text()="HomePage"]',
+	     '//h1/a[@name="foo"][text()="foo"]',
+	     '//a[@class="local"][@href="#bar"][text()="bar"]',
+	     '//h1/a[@name="bar"][text()="bar"]')
+
+  And the same thing for negavtive matches, of course:
+
+    negative_xpath_test($page, '//h1/a[not(text())]');
 
 
   run_macro_tests
   ---------------
 
-  run_macro_tests(split('\n',<<'EOT'));
-  $input1
-  $output2
-  $input2
-  $output2
-  EOT
+    run_macro_tests(split('\n',<<'EOT'));
+    $input1
+    $output2
+    $input2
+    $output2
+    EOT
 
   Tests @MyMacros.
-  
+
+
