--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-10-04  Alex Schroeder  <alex@gnu.org>
+
+	* modules/calendar.pl (Cal): Allow the $id substring anywhere in
+	the pagename, not just right after the date. This also handles
+	hours and minutes between the date and $id.
+
 2006-10-01  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (DoPost): Rearranged tests such that MIME type is tested
