--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-06  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (%Action): Added more.
+	(DoJournal): New, calls PrintJournal.
+	(PrintJournal): Addd "More..." link if appropriate. No longer
+	print horizontal lines before pages.
+
 2006-10-04  Alex Schroeder  <alex@gnu.org>
 
 	* modules/calendar.pl (Cal): Allow the $id substring anywhere in
