*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-29  Alex Schroeder  <alex@gnu.org>
+
+	* modules/forms.pl (FormsRule): Allow <html> blocks.
+
 2006-10-21  Alex Schroeder  <alex@gnu.org>
 
 	* Makefile: Added rule to build package and disk-image for Mac OSX
