--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-26  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Support {{mu|text}}, ie. Creole
+	0.2.
+
 2006-10-29  Alex Schroeder  <alex@gnu.org>
 
 	* modules/forms.pl (FormsRule): Allow <html> blocks.
