--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-27  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Improved heuristics allowing
+	bold words at the beginning of paragraphs.
+
 2006-11-26  Alex Schroeder  <alex@gnu.org>
 
 	* modules/creole.pl (CreoleRule): Support {{mu|text}}, ie. Creole
