--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-01-14  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl: Add CreoleHeadingRule to MyRules.
+
+	* wiki.pl (BannedContent): Extract banned content comment and
+	display it, if possible.
+
 2007-01-12  Alex Schroeder  <alex@gnu.org>
 
 	* modules/creole.pl (CreoleHeadingRule, CreoleRule): Moved
