*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,9 @@
 2007-01-31  Alex Schroeder  <alex@gnu.org>
 
 	* modules/bbcode.pl (bbCodeRule): Added support for url, img,
-	quote, and code.
+	quote, code, and smiley fallback.
 
-	* wiki.pl (InitCookie, PrintWikiToHTML, PrintAllPages)
+	* Wiki.pl (InitCookie, PrintWikiToHTML, PrintAllPages)
 	(BrowseResolvedPage, GetRcLines, GetRc, GetRcRss)
 	(DoContributors, DoRollback, GetFooterLinks, GetCommentForm)
 	(OpenPage, UserCanEdit, BannedContent, PrintSearchResult)
