--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-09  Alex Schroeder  <alex@gnu.org>
 
+	* modules/toc.pl (TocInit): New.
+	(TocRule, TocHeadings): Simplify the code so that id attributes
+	are only generated for the "main" page (the one returned by
+	GetId).
+
+	* modules/sidebar.pl (NewSideBarGetHeader): Get rid of
+	$SideBarOpenPageName.
+
 	* modules/image.pl (ImageSupportRule): Add a
 	CloseHtmlEnvironments() call if the image has a caption.
 
