--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-02-14  Alex Schroeder  <aschroeder@localhost>
+
+	* modules/index.pl (DoPrintableIndex): Added a content div around
+	it all.
+
+2007-02-13  Alex Schroeder  <aschroeder@localhost>
+
+	* modules/creole.pl (CreoleRule, $CreoleLineBreaks): New.
+	(CreoleRule): Support \\.
+	(CreoleHeadingRule): Support = for h1.
+
 2007-02-09  Alex Schroeder  <alex@gnu.org>
 
 	* modules/toc.pl (TocInit): New.
