--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-22  Alex Schroeder  <aschroeder@localhost>
+
+	* modules/sistersites.pl (DoSisterPages): Url encode the page id.
+
 2007-02-20  Alex Schroeder  <aschroeder@localhost>
 
 	* modules/journal-rss.pl (DoJournalRss): Protect call to
