--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,17 @@
 2007-04-02  Alex Schroeder  <alex@gnu.org>
 
+	* wiki.pl (GetSummary): Fix double HTML quoting for default texts.
+
+2007-04-02  Alex Schroeder  <alex@gnu.org>
+
 	* modules/namespaces.pl ($NamespaceSlashing): New variable.
 	(NewNamespaceDoRc): Set it.
 	(NewNamespaceUrlEncode): Wrapper around UrlEncode() that uses it.
+
+2007-03-24  Alex Schroeder  <alex@gnu.org>
+
+	* modules/live-templates.pl (LiveTemplateRule): Save $_, use
+	Clean(). This should fix the clean + dirty block mess.
 
 2007-02-22  Alex Schroeder  <aschroeder@localhost>
 
