--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-03  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Implement Creole 0.5 table
+	headers.
+
 2007-04-03  Alex Schroeder  <aschroeder@localhost>
 
 	* wiki.pl (ApplyRules, RSS): Add error class to error messages.
