--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-04  Alex Schroeder  <aschroeder@localhost>
+
+	* modules/creole.pl (CreoleRule): New Table code.
+
 2007-04-03  Alex Schroeder  <alex@gnu.org>
 
 	* modules/creole.pl (CreoleRule): Implement Creole 0.5 table
