--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-14  Alex Schroeder  <alex@gnu.org>
+
+	* modules/creole.pl (CreoleRule): Fix bug with double dirty
+	blocks.
+
 2007-04-10  Alexander Uvizhev  <uvizhe@yandex.ru>
 
         * modules/translations/russian-utf8.pl: New translations and some
