--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-18  Alexander Uvizhev  <uvizhe@yandex.ru>
+
+	* modules/linktagmap.pl: Many changes. This module now works
+	properly with all external link patterns.
+
 2007-04-14  Alex Schroeder  <alex@gnu.org>
 
 	* modules/creole.pl (CreoleRule): Fix bug with double dirty
@@ -5,7 +10,7 @@
 
 2007-04-10  Alexander Uvizhev  <uvizhe@yandex.ru>
 
-        * modules/translations/russian-utf8.pl: New translations and some
+	* modules/translations/russian-utf8.pl: New translations and some
 	correction.
 
 2007-04-09  Alex Schroeder  <alex@gnu.org>
