*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-27  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (PrintAllPages): Print link to comment pages even if
+	these cannot be edited, as suggested by Marcin Borkowski.
+
 2007-04-22  Alex Schroeder  <alex@gnu.org>
 
 	* modules/creole.pl (CreoleRule): Require space after dash and
