--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-01  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (GetRcRss): Use NormalToFree on the RCName in the title.
+
 2007-06-30  Alex Schroeder  <alex@gnu.org>
 
 	Implement follow-up functionality for RecentChanges; make RSS
