--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-02  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (GetRcText, RcTextRevision): Moved code out of GetRcText
+	into a separate sub.
+	(DoHistory): Support raw=1 and use RcTextRevision to print raw
+	history items.
+	(GetLanguages): Got rid of useless $count.
+
 2007-07-01  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (GetRcRss): Use NormalToFree on the RCName in the title.
